--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <div class="container mt-5" style="background-image: url('/asset/1349197.png'); background-size: cover; background-position: center; height: 100vh;">
+    <div class="container mt-5" style="background-image: url('https://github.com/AlokRepo/TodoMaster/blob/main/asset/1349197.png'); background-size: cover; background-position: center; height: 100vh;">
         <h1 class="text-center text-white">TodoMaster</h1>
         <form id="todo-form">
             <div class="form-group">
